syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.grpcflix.movie";

import "common/common.proto";

message MovieDTO {
  string title = 1;
  int32 year = 2;
  double rating = 3;
}

message MovieSearchAllRequest {}

message MovieSearchRequest {
  common.Genre genre = 1;
}

message MovieSearchResponse {
  repeated MovieDTO movies = 1;
}

service MovieService {
  rpc getMovies(MovieSearchRequest) returns (MovieSearchResponse);
  rpc getAllMovies(MovieSearchAllRequest) returns (MovieSearchResponse);
}

